gitops/espresso/apps/mattermost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    pod-security.kubernetes.io/enforce: baseline
