gitops/espresso/apps/mattermost/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mattermost
  namespace: mattermost
spec:
  replicas: 1
  serviceName: mattermost-internal
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
      annotations:
        secret.reloader.stakater.com/reload: postgres-outputs
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mattermost
          image: docker.io/mattermost/mattermost-team-edition:11.11.0@sha256:335db2833330323d9a9f43313429f4b16b497067644660acfdfc2424ab04d2de
          ports:
            - name: http
              containerPort: 8065
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 3Gi
          startupProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            periodSeconds: 30
          securityContext:
            runAsNonRoot: true
            runAsUser: 2000
            runAsGroup: 2000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: data
              mountPath: /mattermost/config
              subPath: config
            - name: data
              mountPath: /mattermost/data
              subPath: data
            - name: data
              mountPath: /mattermost/logs
              subPath: logs
            - name: data
              mountPath: /mattermost/plugins
              subPath: plugins
            - name: data
              mountPath: /mattermost/client/plugins
              subPath: client-plugins
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nvme-ha
        resources:
          requests:
            storage: 20Gi
