gitops/espresso/apps/mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-internal
  namespace: mattermost
spec:
  clusterIP: None
  selector:
    app: mattermost
  ports:
    - name: http
      port: 8065
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: mattermost
spec:
  selector:
    app: mattermost
  ports:
    - name: http
      port: 8065
      targetPort: http
