gitops/espresso/apps/mattermost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
  namespace: mattermost
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - mattermost.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: mattermost
          port: 8065
